// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test ts-bundle utils test bundleModuleDeclare 1`] = `
"// module name: app1/foo

declare module 'app1/foo' {
    export const add: (a: string, b: string) => string;

    export class Hello {
        private name;
        constructor(name: string);
    }

    export default add;
    export { };
}

// module name: app1/bar

declare module 'app1/bar' {
    export const add2: (a: string, b: string) => string;

    export class Hello2 {
        private name;
        constructor(name: string);
    }

    export default Hello2;
    export { };
}

"
`;

exports[`test ts-bundle utils test dts bundle generator wrapper 1`] = `
"// Generated by dts-bundle-generator v5.9.0

export declare const add2: (a: string, b: string) => string;
export declare class Hello2 {
	private name;
	constructor(name: string);
}
export default Hello2;

export {};
"
`;

exports[`test ts-bundle utils test dts bundle generator wrapper 2`] = `
"// Generated by dts-bundle-generator v5.9.0

export declare const add: (a: string, b: string) => string;
export declare class Hello {
	private name;
	constructor(name: string);
}
export default add;

export {};
"
`;
